style: fix Raw JSON visibility in dark mode

--- a/static/dark.css
+++ b/static/dark.css
@@ -8,7 +8,7 @@ a, button, span, div, select {
   outline: none;
 }
 
-body, button, html, table {
+body, button, html, table, pre, code {
   color: #e9ebf0 !important;
 }
 
